# integrate-compiler

./: CMakeLists.txt  build.sh
defs/: mb_ip.ipdef
include/backends/: QEMUBackend.h  RegHeaderBackend.h
include/dsl/: AST.h  FabricParser.h  IPDefParser.h  Lexer.h  ParserBase.h  SoCParser.h  Token.h
include/ir/: EncoderBase.h  IPDefEncoder.h  SoCEncoder.h
src/backends/: CMakeLists.txt  QEMUBackend.cpp  RegHeaderBackend.cpp
src/dsl/: AST.cpp  CMakeLists.txt  IPDefParser.cpp  Lexer.cpp  ParserBase.cpp
src/ir/: CMakeLists.txt  EncoderBase.cpp  IPDefEncoder.cpp
tools/ipdef-ir-test/: CMakeLists.txt  main.cpp
tools/ipdef-parser-test/: CMakeLists.txt  main.cpp
tools/ipdef-regheader-test/: CMakeLists.txt  main.cpp
tools/lexer-test/: CMakeLists.txt  main.cpp
